--- a/website/css/profile-menu.css
+++ b/website/css/profile-menu.css
@@ -1,21 +1,13 @@
-/* Profile Menu - Align with other menu buttons */
+/* Profile Menu - Dropdown styling */
 
 #menu-item-500 {
   position: relative;
-  display: inline-flex;
-  align-items: center;
 }
 
 #menu-item-500 .menu-link {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
   gap: 4px;
   cursor: pointer;
   user-select: none;
-  line-height: 2em;
-  height: 100%;
-  padding: 0 12px;
 }
 
 #menu-item-500 .ast-menu-toggle {
@@ -30,7 +22,6 @@
   width: 18px;
   height: 18px;
   flex-shrink: 0;
-  line-height: 2em;
 }
 
 #menu-item-500 .sub-menu {
